@@ -1,3 +1,12 @@
+2008-09-09  Andreas K. Foerster  <info@akfoerster.de>
+
+	* avatarsay.c (menu):
+	different balloon-size, no viewport anymore
+	several other funtions adapted
+
+	* avatarsay.c (ask_manpage):
+	fix: clear file buffer
+
 2008-09-08  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtterm.c (reset_terminal):
